# moqtail

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package.json  tsconfig.json
bytes/: jest.config.js  package.json  tsconfig.json
bytes/src/: index.test.ts  index.ts
client/: .eslintrc.cjs  .stylelintrc.json  README.md  package.json  svelte.config.js  tsconfig.json
client/src/: app.d.ts  audioWorklet.d.ts  mediaElement.d.ts
client/src/lib/: config.ts  publisher.ts  store.ts  subscriber.ts  trackManager.ts
client/src/routes/: +layout.svelte  +page.svelte  styles.css
examples/unidirectional-webcam-streaming/: README.md  package.json  tsconfig.json
examples/unidirectional-webcam-streaming/src/: app.d.ts
examples/webcam-streaming/: .gitignore  package.json  tsconfig.json
examples/webcam-streaming/src/: app.d.ts
moqtail/: README.md  app.d.ts  jest.config.js  package.json  tsconfig.json
moqtail-core/: app.d.ts  jest.config.js  package.json  tsconfig.json  tsconfig.test.json
moqtail-core/src/: constants.ts  dataStreams.test.ts  index.ts  messages.announce.test.ts  messages.fetch.test.ts  messages.setup.test.ts  messages.subscribe.test.ts  messages.test.ts  mi.test.ts  utils.test.ts
moqtail-core/test/: dataStreams.test.ts  messages.announce.test.ts  messages.fetch.test.ts  messages.setup.test.ts  messages.subscribe.test.ts  messages.test.ts  mi.test.ts  utils.test.ts
moqtail/src/: index.ts
src/: constants.ts  index.ts
src/dataStreams/: datagram.ts  extensionHeader.ts  subgroupHeader.ts  subgroupObject.ts
src/messages/: announce.ts  announceError.ts  announceOk.ts  clientSetup.ts  fetch.ts  fetchOk.ts  readControlMessageType.ts  serverSetup.ts  subscribe.ts  subscribeAnnounces.ts  subscribeAnnouncesError.ts  subscribeDone.ts  subscribeError.ts  subscribeOk.ts  subscribeUpdate.ts  subscribesBlocked.ts  trackStatus.ts  trackStatusRequest.ts  unannounce.ts  unsubscribe.ts  unsubscribeAnnounces.ts
src/packagers/: loc.test.ts  loc.ts
src/packagers/mi/: opus.ts  (+5 more)
src/utils/: bytes.ts  namespace.ts  parameter.ts
(+159 files in other folders)
